--- a/src/style.css
+++ b/src/style.css
@@ -5,9 +5,11 @@
   margin: 0;
   font-family: "Inter", sans-serif;
 }
+
 body {
-  background-color: rgb(245, 245, 245);
+  background-color: #f5f5f5;
 }
+
 header {
   top: 0;
   position: fixed;
@@ -82,7 +84,7 @@ footer {
   color: #577499;
   background-color: #ffd446;
   text-align: center;
-  margin-top: 600px;
+  margin-top: 70px;
   width: 100%;
 }
 
@@ -114,74 +116,68 @@ footer {
 
 /* main */
 
-.container-login {
-  color: white
-  ;
-}
- 
-.container-login {
-    color: white
-    ;
-}
+.cadastro-adotante {
 
-main {
-    background-image: linear-gradient( to bottom, #ffc400, #ffd446);
-    box-shadow: 3px 3px 10px #bd9d37;
-    border-radius: 10px;
-    color: #6b5959;
-    position: absolute;
-    padding: 40px 10px 30px 10px;
-    text-align: center;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.login-link {
-    text-decoration: none;
-    color: #ffffff;
-}
-
-.login-link:hover {
-    color: #405672;
-}
-
-.input-box {
-    margin: 40px;
-}
-
-input {
-    padding: 8px;
-    outline: none;
-}
-
-.input-email {
-    margin: 10px;
-}
-
-.entrar-button {
-    background-color: #7092bf;
-    padding: 10px;
-    border-radius: 5px;
-    margin: 20px;
-    color: #ffffff;
-    width: 46%;
-    font-weight: 500;
-    border: none;
-}
-
-.entrar-button:hover{
-    background-color: #405672;
+  color: white;
 
 }
-.login-link-p {
-    padding: 20px;
-    font-weight: 500;
+
+
+#caixaFormulario {
+
+  background-color: #ffd446;
+  border-radius: 15px;
+  border: 0, 5px solid black;
+  margin-right: 90mm;
+  margin-left: 80mm;
+  margin-block-start: 30mm;
+
 }
 
+.cadastro-adotante h1 {
+
+  color: #7092bF;
+  text-align: center;
+  padding: 10mm;
+
+}
+
+.cadastro-adotante form {
+
+  line-height: 10mm;
+  margin-left: 55mm;
+  margin-right: 40mm;
+}
+
+.formulario{
+
+  font:1em sans-serif;
+  width: 300px;
+  box-sizing: border-box;
+  vertical-align: top;
+  height: 5em;
+  box-shadow: #7092be;
+
+}
+
+.formulario-input{
+
+  border-radius: 5px; 
+  width: 40mm;
+  height: 5mm;
+
+}
+
+#botaoCadastroAdotante {
+
+  margin-block-start: 15mm;
+  color: white;
+  background-color: #7092bF;
+  width: 20mm;
+  height: 10mm;
+  margin-left: 30mm;
+  margin-right: 20mm;
 
 
-
-
-
+}
 
