Tela para selecionar tipo de cadastro

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -11,7 +11,7 @@
             <li class="nav-item"><a href="./../pages/adote.html">Adote</a></li>
             <li class="nav-item"><a href="#">Sobre</a></li>
             <li class="nav-item"><a href="#">Ajude</a></li>
-            <li class="nav-item"><a href="#">Cadastro</a></li>
+            <li class="nav-item"><a href="./../pages/cadastrese.html">Cadastro</a></li>
             <li class="nav-item"><a href="#">Contato</a></li>
         </ul>
         </div>
