Atualizações no footer e pág de login

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -4,10 +4,10 @@
       <div class="footer-content">
         <a href="#">SOBRE NÓS</a>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
-          sint ex. Quidem voluptas id dicta provident, quod quam earum! Deleniti
-          nam consectetur suscipit cumque natus officia doloremque, iusto ex
-          alias.
+            O site foi criado pensando na problemática das ONGs divulgarem seus
+            animais e fazerem campanhas de adoção. Observando essa necessidade,
+            foi criado o "Patinhas Felizes", onde diversas ONGs podem se cadastrar
+            e mostrar os pets que possuem disponíveis para que você possa adotar!
         </p>
         <div class="container-icones">
           <img src="./../imag/facebook.png" class="footer-icons" alt="" />
